--- a/netlify.toml
+++ b/netlify.toml
@@ -9,4 +9,10 @@
   path = "/hello-template"
   function = "transform-hello-template"
 
+[[plugins]]
+  package = "netlify-plugin-cloudinary"
+
+  [plugins.inputs]
+  cloudName = "daz1w86h9"
+
 
