--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "getting-started-with-netlify-edge-functions",
   "version": "1.0.0",
   "description": "Code examples to support the Getting Started with Netlify Edge Functions tutorial.",
-  "scripts": {},
+  "scripts": {
+    "local": "live-server public --port=3000 --entry-file=index.html"
+  },
   "author": "whitep4nth3r",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/whitep4nth3r/getting-started-with-netlify-edge-functions.git"
+  },
+  "dependencies": {
+    "live-server": "^1.2.2"
   }
 }
