--- a/netlify.toml
+++ b/netlify.toml
@@ -9,4 +9,9 @@
   path = "/hello-template"
   function = "transform-hello-template"
 
+[[plugins]]
+  package = "netlify-plugin-imagekit"
+
+  [plugins.inputs]
+  urlEndpoint = "https://ik.imagekit.io/a1yisxurxo/proxy/"
 
