--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   },
   "dependencies": {
     "live-server": "^1.2.2"
+  },
+  "devDependencies": {
+    "netlify-plugin-imagekit": "file:netlify-plugin-imagekit-1.0.0.tgz"
   }
 }
